# dottosink

./: .gitignore  README.md  main.py  pyproject.toml
scholar_sink/: db.py  fetcher.py  models.py  processor.py  refiner.py  search.py
tests/: test_cli_tools.py  test_ingestion.py  test_processor.py  test_refiner.py  test_search.py
